# intersections

./: CMakeLists.txt  Makefile  README.md
src/: intersections.cpp  intersections.h
src/util/: Separated.h  fixed_vector.h  stringify.h  weak_unordered_set.h
test/: fixed_vector_test.cpp  type_test.cpp  wus_test.cpp
